<resources>
    <string name="app_name">Lab_4_Resistors</string>
    <string name="Rd">2</string>
    <string name="Brn">1</string>
    <string name="Blk">0</string>
    <string name="Ylw">4</string>
    <string name="Grn">5</string>
    <string name="Blu">6</string>
    <string name="Vio">7</string>
    <string name="Gry">8</string>
    <string name="Wht">9</string>
    <string name="Orn">3</string>
    <string name="band_1">Band 1</string>
    <string name="resistor">Resistor</string>
    <string name="value">value</string>
    <string name="resistor_calculation_app">Resistor Calculation App</string>
    <string name="resistor2">Resistor2</string>
    <string name="range">Range:</string>
    <string name="resistance">Resistance</string>
    <string name="please_select_the_resistor_colours_from_the_drop_down">please select the resistor colours from the drop down</string>
    <string name="lab_4_j_dolan">Lab 4. J Dolan</string>
    <string name="tolerance">Tolerance:</string>
    <string name="Range">Range:</string>
    <string name="Resistance">Resistance:</string>
    <string name="please_select_the_resistor_colours_from_the_dropdowns">please select the resistor colours from the dropdowns</string>
    <string-array name="Resistor_array">
        <item></item>
        <item>Black</item>
        <item>Brown</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Violet</item>
        <item>Grey</item>
        <item>White</item>
    </string-array>
    <string-array name="tolerance_array">
        <item></item>
        <item>Brown</item>
        <item>Red</item>
        <item>Gold</item>
        <item>Silver</item>
    </string-array>
</resources>
