<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jdolan.lab_4_resistors.MainActivity">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/Blk"
        android:id="@+id/Blk"
        android:background="#080707"
        android:textColor="#fefefc"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="7dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button"
        android:background="#dedcdc"
        android:layout_gravity="center_horizontal" />

    <Spinner
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/Band_2"
        android:background="#dedcdc"
        android:layout_column="28"
        android:layout_alignTop="@+id/button"
        android:layout_toLeftOf="@+id/Band_1"
        android:layout_toStartOf="@+id/Band_1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/Grn"
        android:id="@+id/button6"
        android:background="#319616"
        android:layout_row="13"
        android:layout_column="0"
        android:clickable="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/Vio"
        android:id="@+id/button8"
        android:background="#c62ada"
        android:layout_row="15"
        android:layout_column="0"
        android:clickable="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_below="@+id/Rd"
        android:layout_toRightOf="@+id/button7"
        android:layout_toEndOf="@+id/button7" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/Blu"
        android:id="@+id/button7"
        android:background="#173ab9"
        android:layout_row="14"
        android:layout_column="0"
        android:clickable="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_below="@+id/Rd"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/Orn"
        android:id="@+id/Or"
        android:background="#f87c23"
        android:layout_row="11"
        android:layout_column="0"
        android:clickable="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_alignTop="@+id/button9"
        android:layout_toRightOf="@+id/button9"
        android:layout_toEndOf="@+id/button9" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/Rd"
        android:id="@+id/Rd"
        android:background="#f40a0a"
        android:layout_row="10"
        android:layout_column="0"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/button9"
        android:layout_toRightOf="@+id/button9"
        android:layout_toEndOf="@+id/button9" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/Ylw"
        android:id="@+id/button5"
        android:background="#fcdf08"
        android:layout_row="12"
        android:layout_column="0"
        android:clickable="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_alignTop="@+id/Brn"
        android:layout_toRightOf="@+id/Brn"
        android:layout_toEndOf="@+id/Brn" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/Gry"
        android:id="@+id/button9"
        android:background="#b0b4b3"
        android:layout_row="16"
        android:layout_column="0"
        android:clickable="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_gravity="right"
        android:layout_above="@+id/button10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/Wht"
        android:id="@+id/button10"
        android:background="#fcfefe"
        android:layout_row="17"
        android:clickable="true"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginBottom="66dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Brn"
        android:id="@+id/Brn"
        android:background="#9c5b06"
        android:layout_row="8"
        android:layout_column="0"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_gravity="center_vertical"
        android:layout_above="@+id/Or"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <Spinner
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:id="@+id/Band_1"
        android:background="#dedcdc"
        android:layout_column="10"
        android:layout_alignTop="@+id/Band_2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
